# BMP-Compressor

./: CMakeLists.txt  Makefile  README.md
cmake_modules/: FindSDL2.cmake
doc/: doc.docx
include/: BMP.h  BitsToFile.h  CText.h  Huffman.h  Image.h  ImageHandler.h  InputHandler.h  LZ77.h  Node.h  RGB12.h  RuntimeError.h  SDL_Local.h
source/: Huffman.cpp  Image.cpp  ImageHandler.cpp  SDL_Local.cpp
src/: Application.cpp  BMP.cpp  BitsToFile.cpp  CText.cpp  InputHandler.cpp  LZ77.cpp  Node.cpp  RGB12.cpp  RuntimeError.cpp
test/: grey_scaled.rgb12  huffman.rgb12  image.rgb12  lz77.rgb12  main.cpp
